--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     
         <div id="bg">
             <!-- BACKGROUND -->
+            <div class="ball top"></div>
+            <div class="ball bottom"></div>
         </div>
 
         <main>
