--- a/create-pass.html
+++ b/create-pass.html
@@ -36,7 +36,7 @@
                         <input type="password" id="room-pass" placeholder="Insira uma senha">
 
                         <button>
-                            <img src="assets/users.svg" alt="Entrar na sala">
+                            <img src="assets/users-white.svg" alt="Entrar na sala">
                             Entrar na sala
                         </button>
                     </form>
