--- a/room.html
+++ b/room.html
@@ -55,10 +55,10 @@
                 <h2 class="sr-only">Perguntas da comunidade</h2>
                 <div class="questions">
                     
-                    <div class="question wrapper">
+                    <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="assets/avatar.svg" alt="Avatar">
+                                <img src="assets/user.svg" alt="Avatar">
                             </div>
                             <div class="question">
                                 <p>Qual a diferença entre var, let e const no JS?</p>
@@ -67,6 +67,28 @@
                         <div class="actions">
                             <a href="#" class="check">
                                 <img src="assets/check.svg" alt="Marcar como lida">
+                                Marcar como lida
+                            </a>
+                            <a href="#" class="delete">
+                                <img src="assets/trash.svg" alt="Excluir pergunta">
+                                Excluir
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="question-wrapper">
+                        <div class="question-content">
+                            <div class="user">
+                                <img src="assets/user.svg" alt="Avatar">
+                            </div>
+                            <div class="question">
+                                <p>O que é JavaScript?</p>
+                            </div>
+                        </div>
+                        <div class="actions">
+                            <a href="#" class="check">
+                                <img src="assets/check.svg" alt="Marcar como lida">
+                                Marcar como lida
                             </a>
                             <a href="#" class="delete">
                                 <img src="assets/trash.svg" alt="Excluir pergunta">
@@ -75,6 +97,27 @@
                         </div>
                     </div>
                     
+                    <div class="question-wrapper">
+                        <div class="question-content">
+                            <div class="user">
+                                <img src="assets/user.svg" alt="Avatar">
+                            </div>
+                            <div class="question">
+                                <p>O que é Script</p>
+                            </div>
+                        </div>
+                        <div class="actions">
+                            <a href="#" class="check">
+                                <img src="assets/check.svg" alt="Marcar como lida">
+                                Marcar como lida
+                            </a>
+                            <a href="#" class="delete">
+                                <img src="assets/trash.svg" alt="Excluir pergunta">
+                                Excluir
+                            </a>
+                        </div>
+                    </div>
+
                 </div>
             </section>
         </main>
