--- a/room.html
+++ b/room.html
@@ -9,6 +9,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/room.css">
+    <link rel="stylesheet" href="styles/modal.css">
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -82,7 +83,7 @@
                                 <img src="assets/user.svg" alt="Avatar">
                             </div>
                             <div class="question">
-                                <p>O que é JavaScript?</p>
+                                <p>Você já sabe quais as bases você precisa melhorar para alcançar o próximo nível com maestria? Definiu o seu foco e objetivo para seguir em frente? Estou crioso e embasbacado com sua perseverança por ter alcançado a terceira aula e sei que vai continuar até o fim, então, responde ai pra gente.</p>
                             </div>
                         </div>
                         <div class="actions">
@@ -97,7 +98,7 @@
                         </div>
                     </div>
                     
-                    <div class="question-wrapper">
+                    <div class="question-wrapper read">
                         <div class="question-content">
                             <div class="user">
                                 <img src="assets/user.svg" alt="Avatar">
@@ -107,10 +108,10 @@
                             </div>
                         </div>
                         <div class="actions">
-                            <a href="#" class="check">
+                            <!-- <a href="#" class="check">
                                 <img src="assets/check.svg" alt="Marcar como lida">
                                 Marcar como lida
-                            </a>
+                            </a> -->
                             <a href="#" class="delete">
                                 <img src="assets/trash.svg" alt="Excluir pergunta">
                                 Excluir
@@ -122,6 +123,25 @@
             </section>
         </main>
     </div>
+
+    <!-- MODAL -->
+    <div class="modal-wrapper">
+        <div class="modal">
+            <h2>Excluir pergunta</h2>
+            <p>Tem certeza que você deseja excluir esta pergunta?</p>
+
+            <form action="">
+                <label for="password" class="sr-only">Digite sua senha admin</label>
+                <input type="password" name="password" id="password" placeholder="Digite seu senha">
+
+                <div class="buttons">
+                    <div class="button grey">Cancelar</div>
+                    <button class="red">Sim, excluir</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
 </body>
 </html>
 
